# config

./: Cargo.toml  README.md  配置文档.md  默认配置.toml
src/: cli.rs  lib.rs  main.rs
src/commands/: check.rs  mod.rs  update.rs
src/os/: windows.rs
src/utils/: mod.rs
