[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
hostname = "0.4.2"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.34"
toml = "1.1.2"
